# MayaDevUtil

./: README.md
cmake/: FindMaya.cmake
cmake/examples/helixQtCmd/: CMakeLists.txt  helixQtCmd.cpp
cmake/examples/helloworld/: CMakeLists.txt  helix.cpp  helloWorld.cpp
qt/: Makefile.qt  buildconfig  myplugin.pro  qtconfig
scripts/: linkqwt2Maya.sh
xcode/C++ Class Files.xctemplate/: ___FILEBASENAME___.cpp  ___FILEBASENAME___.h
xcode/Maya Plug-in.xctemplate/: TemplateInfo.plist  main.cpp
xcode/QtWidget.xctemplate/: TemplateInfo.plist  ___FILEBASENAME___.cpp  ___FILEBASENAME___.h
